// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpensesSummary with 1 expense 1`] = `
<div>
  <p>
    Currently viewing 
    1
     
    expense
    , totalling 
    $ 10.00 
  </p>
</div>
`;

exports[`Should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <p>
    Currently viewing 
    5
     
    expenses
    , totalling 
    $ 100.00 
  </p>
</div>
`;
